// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders a placeholder 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    id="first_name"
    placeholder="Your first name"
    type="text"
  />
</label>
`;

exports[`render renders a textarea 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
  resize: none;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <textarea
    className="c1"
    id="first_name"
    rows={5}
    type="text"
  />
</label>
`;

exports[`render renders disabled 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    disabled={true}
    id="first_name"
    type="text"
  />
</label>
`;

exports[`render renders read only 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    id="first_name"
    readOnly={true}
    type="text"
  />
</label>
`;

exports[`render renders with a different type 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    id="first_name"
    type="password"
  />
</label>
`;

exports[`render renders with a label 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  margin-bottom: 4px;
  color: #2C2C2C;
  display: block;
}

.c2 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c2::-moz-placeholder {
  color: #E2E6E3;
}

.c2:-ms-input-placeholder {
  color: #E2E6E3;
}

.c2:focus,
.c2:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c2:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c2:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c2:invalid:hover,
.c2:invalid:focus,
.c2:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c2:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c2:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c2:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c2:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c2:disabled:hover,
.c2:disabled:focus,
.c2:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c2:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c2:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c2:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c2:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c2:-moz-read-only:hover,
.c2:-moz-read-only:focus,
.c2:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c2:read-only:hover,
.c2:read-only:focus,
.c2:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c2:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c2:read-only::-moz-placeholder {
  color: #747474;
}

.c2:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <span
    className="c1"
  >
    First Name
  </span>
  <input
    className="c2"
    id="first_name"
    type="text"
  />
</label>
`;

exports[`render renders with a value 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    id="first_name"
    type="text"
    value="Wadus"
  />
</label>
`;

exports[`render renders with an error 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 12px;
  vertical-align: middle;
  width: 12px;
  fill: #1785FB;
}

.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
}

.c2 > span {
  -webkit-font-smoothing: antialiased;
  font: 600 10px/12px 'Roboto';
  color: #F3522B;
  margin-left: 4px;
}

.c2 > svg {
  fill: #F3522B;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:hover,
.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    id="first_name"
    type="text"
  />
  <div
    className="c2"
  >
    <svg
      className="c3"
      size={12}
      viewBox="0 0 16 16"
    >
      <path
        d="M7.9558123,1.27807675 L1.1405637,14.5957676 C0.966707294,14.9355008 0.966708997,14.9355037 1.33907042,14.9355037 L14.6616325,14.9355037 C15.0318872,14.9355037 15.0330209,14.9335959 14.8601393,14.5957676 L8.04489066,1.27807675 C7.94740694,1.08758361 7.91829677,1.06451327 8.00045152,1.06449634 C8.08250041,1.06447943 8.05325364,1.08766644 7.9558123,1.27807675 Z M7.02981595,0.785783696 C7.56582792,-0.261638373 8.43457874,-0.262217384 8.97088702,0.785783696 L15.7861356,14.1034746 C16.3221476,15.1508966 15.8151156,16 14.6616325,16 L1.33907042,16 C0.182012546,16 -0.321740933,15.1514757 0.214567348,14.1034746 L7.02981595,0.785783696 Z M7.32190618,12.806511 L7.32190618,13.8710073 L8.36629771,13.8710073 L8.36629771,12.806511 L7.32190618,12.806511 Z M7.32190618,6.41953289 L7.32190618,11.7420146 L8.36629771,11.7420146 L8.36629771,6.41953289 L7.32190618,6.41953289 Z"
      />
    </svg>
    <span>
      This field is required
    </span>
  </div>
</label>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c1::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c1::-moz-placeholder {
  color: #E2E6E3;
}

.c1:-ms-input-placeholder {
  color: #E2E6E3;
}

.c1:focus,
.c1:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c1:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c1:invalid:hover,
.c1:invalid:focus,
.c1:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c1:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c1:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c1:disabled:hover,
.c1:disabled:focus,
.c1:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c1:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c1:-moz-read-only:hover,
.c1:-moz-read-only:focus,
.c1:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only:hover,
.c1:read-only:focus,
.c1:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c1:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c1:read-only::-moz-placeholder {
  color: #747474;
}

.c1:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <input
    className="c1"
    id="first_name"
    type="text"
  />
</label>
`;

exports[`render uses htmlFor for the label, and adds it as the input id 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-bottom: 16px;
}

.c1 {
  font: 400 12px/20px 'Roboto';
  margin-bottom: 4px;
  color: #2C2C2C;
  display: block;
}

.c2 {
  font: 400 12px/20px 'Roboto';
  box-sizing: border-box;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: inset 0 0 0 1px #D1D5D7;
  box-sizing: border-box;
  color: #2C2C2C;
  min-height: 32px;
  padding: 6px 8px;
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #E2E6E3;
}

.c2::-moz-placeholder {
  color: #E2E6E3;
}

.c2:-ms-input-placeholder {
  color: #E2E6E3;
}

.c2:focus,
.c2:hover:focus {
  box-shadow: inset 0 0 0 2px #1785FB;
  outline: none;
}

.c2:hover {
  box-shadow: inset 0 0 0 1px #47DB99;
}

.c2:invalid {
  box-shadow: inset 0 0 0 1px #F3522B;
  background: rgba(243,82,43,0.12);
}

.c2:invalid:hover,
.c2:invalid:focus,
.c2:invalid:hover:focus {
  box-shadow: inset 0 0 0 1px #F3522B;
}

.c2:invalid::-webkit-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c2:invalid::-moz-placeholder {
  color: rgba(44,44,44,0.4);
}

.c2:invalid:-ms-input-placeholder {
  color: rgba(44,44,44,0.4);
}

.c2:disabled {
  background: #F5F5F5;
  color: rgba(116,116,116,0.4);
}

.c2:disabled:hover,
.c2:disabled:focus,
.c2:disabled:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c2:disabled::-webkit-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c2:disabled::-moz-placeholder {
  color: rgba(116,116,116,0.4);
}

.c2:disabled:-ms-input-placeholder {
  color: rgba(116,116,116,0.4);
}

.c2:read-only {
  background: #F5F5F5;
  color: #747474;
}

.c2:-moz-read-only:hover,
.c2:-moz-read-only:focus,
.c2:-moz-read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c2:read-only:hover,
.c2:read-only:focus,
.c2:read-only:hover:focus {
  box-shadow: inset 0 0 0 1px #D1D5D7;
}

.c2:read-only::-webkit-input-placeholder {
  color: #747474;
}

.c2:read-only::-moz-placeholder {
  color: #747474;
}

.c2:read-only:-ms-input-placeholder {
  color: #747474;
}

<label
  className="c0"
  htmlFor="first_name"
>
  <span
    className="c1"
  >
    First Name
  </span>
  <input
    className="c2"
    id="first_name"
    type="text"
  />
</label>
`;
